fixed color contrast

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 }
 
 .heart {
-  color: #ff00b8;
+  color: #4c0037;
 }
 
 .small {
@@ -33,9 +33,9 @@
 .button:link, .button:visited {
   border-radius: 99px;
   color: #fff;
-  background-color: #ff00b8;
+  background-color: #4c0037;
   cursor: pointer;
-  border: 15px solid #ff00b8;
+  border: 15px solid #4c0037;
   text-decoration: none;
 }
 
