--- a/src/Forms/FeedbackForm.css
+++ b/src/Forms/FeedbackForm.css
@@ -1,5 +1,5 @@
 .feedback-form {
-  border: 3px solid #ff00b8;
+  border: 3px solid #4c0037;
   border-radius: 9px;
   padding-left: 20px;
   padding-right: 20px;
